tests/snapshots/integration__integration_tests__configure_shell__configure_shell_mixed_states_dry_run.snap
---
source: tests/integration_tests/configure_shell.rs
info:
  program: wt
  args:
    - configure-shell
    - "--dry-run"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmprQhDXj
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
Already configured bash [TEMP_HOME]/.bash_profile
  [2meval "$(wt init bash)"[0m
Would add to zsh [TEMP_HOME]/.zshrc
  [2meval "$(wt init zsh)"[0m

----- stderr -----
